--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -25,5 +25,29 @@
 
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBcRdcmeKxUzSj9artsU4xGYGDF5vz9cJc",
+    authDomain: "drehendz.firebaseapp.com",
+    databaseURL: "https://drehendz.firebaseio.com",
+    projectId: "drehendz",
+    storageBucket: "drehendz.appspot.com",
+    messagingSenderId: "715767442487",
+    appId: "1:715767442487:web:9f8a21fd027f3330"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+
+
 </body>
 </html>
