--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114417643-2"   ></script>
+
+<script>
+  
+</script>
+
+
+
+
   <meta charset="utf-8">
-  <title>Drehendz</title>
+  <title>drehendz</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,11 +19,57 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link media="all" type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation-flex.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">  
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script>
+
+  <style>
+      .splash {
+        position: absolute;
+        z-index: 2000;
+        background: white;
+        color: gray;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0
+      }
+
+      splash-title {
+      text-align: center;
+      max-width: 500px;
+      margin: 15% auto;
+      padding: 20px
+    }
+
+    .splash-title h1 {
+      font-size: 26px
+    }
+
+    .color-line {
+      border-radius: 4px 4px 0 0
+    }
+</style>
+
+<script>
+
+</script>
+
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#1976d2">
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="red-theme">  
+
+
+  <app-root>
+<div class="splash">
+  <div class="color-line"></div>
+  <div class="splash-title">
+    <h1>drehendz</h1>
+    <img src="./assets/img/Spinner-1s-200px.svg" width="64" height="64" />
+  </div>
+</div>
+</app-root>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -27,25 +82,11 @@
 
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#config-web-app -->
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyBcRdcmeKxUzSj9artsU4xGYGDF5vz9cJc",
-    authDomain: "drehendz.firebaseapp.com",
-    databaseURL: "https://drehendz.firebaseio.com",
-    projectId: "drehendz",
-    storageBucket: "drehendz.appspot.com",
-    messagingSenderId: "715767442487",
-    appId: "1:715767442487:web:9f8a21fd027f3330"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
+
 
 
 
