--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114417643-2"   ></script>
+  <!--Global site tag (gtag.js)- Google Analytics  -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114417643-2"></script>
 
 <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {dataLayer.push(arguments); }
+  gtag ('js', new Date ());
+
+  gtag('config', 'UA-114417643-2')
   
 </script>
 
@@ -16,11 +22,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link media="all" type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation-flex.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">  
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.min.js"></script>
 
   <style>
       .splash {
@@ -51,6 +53,12 @@
 </style>
 
 <script>
+  var global = global || window;
+  var Buffer = Buffer || [];
+  var process = process || {env:  {DEBUG: undefined},
+version: []
+ };
+
 
 </script>
 
@@ -62,7 +70,8 @@
 
 
   <app-root>
-<div class="splash">
+    <!--Show simple splash-->
+  <div class="splash">
   <div class="color-line"></div>
   <div class="splash-title">
     <h1>drehendz</h1>
@@ -72,7 +81,7 @@
 </app-root>
 
   
-
+<noscript>Please enable Javascript to continue using this application</noscript>
 
 </body>
 </html>
