--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -67,6 +67,8 @@ version: []
 
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1976d2">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="red-theme">  
