fix product list

--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -4,14 +4,14 @@
   
 
   <!--Global site tag (gtag.js)- Google Analytics  -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114417643-2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XTF89DMTBD"></script>
 
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() {dataLayer.push(arguments); }
   gtag ('js', new Date ());
 
-  gtag('config', 'UA-114417643-2')
+  gtag('config', 'G-XTF89DMTBD')
   
 </script>
 
@@ -76,12 +76,12 @@ version: []
   <app-root>
     <!--Show simple splash-->
   <div class="splash">
-  <div class="color-line"></div>
-  <div class="splash-title">
-    <h1>drehendz</h1>
-    <img src="./assets/img/Spinner-1s-200px.svg" width="64" height="64" />
-  </div>
+<div class="color-line"></div>
+<div class="splash-title">
+  <h1>drehendz</h1>
 </div>
+
+  </div>
 </app-root>
 
   
