--- a/drehendz/index.html
+++ b/drehendz/index.html
@@ -4,16 +4,13 @@
 
 
   <!--Global site tag (gtag.js)- Google Analytics  -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XTF89DMTBD"></script>
-
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {dataLayer.push(arguments); }
-  gtag ('js', new Date ());
-
-  gtag('config', 'G-XTF89DMTBD')
-  
-</script>
+ <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N6ZL3VZ');</script>
+  <!-- End Google Tag Manager -->
 
 
 
@@ -73,6 +70,11 @@ version: []
 </head>
 
 <body class="red-theme">  
+  
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6ZL3VZ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <app-root>
     <!--Show simple splash-->
