--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -37,7 +37,7 @@
         right: 0
       }
 
-      splash-title {
+      .splash-title {
       text-align: center;
       max-width: 500px;
       margin: 15% auto;
@@ -60,10 +60,10 @@
 version: []
  };
 
-
+//progressive web app manifest to use web app offline 
 </script>
 
-<link rel="manifest" href="manifest.json">
+<!--link rel="manifest" href="manifest.json"--> 
 <meta name="theme-color" content="#1976d2">
  
 </head>
@@ -81,6 +81,8 @@ version: []
 <div class="color-line"></div>
 <div class="splash-title">
   <h1>drehendz</h1>
+  <img src="./assets/img/Spinner-1s-200px.svg" width="64" height="64" />
+
 </div>
 
   </div>
