ad sense on first deploy firebase

--- a/drehendz/index.html
+++ b/drehendz/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-
+  <script data-ad-client="ca-pub-1304364114164634" 
+  async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+</script>
 
   <!--Global site tag (gtag.js)- Google Analytics  -->
  <!-- Google Tag Manager -->
