--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  
+  <meta name="p:domain_verify" content="de7d036b0d50909779ed25b0bb0bc88b"/>
+  <script data-ad-client="ca-pub-1304364114164634" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!--Global site tag (gtag.js)- Google Analytics  -->
   <!-- Google Tag Manager -->
