added many chat snippet

--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -25,6 +25,8 @@
     crossorigin="anonymous"> 
   <meta http-equiv="Content-Secuity-Policy"
   content="default-src *">
+  <!-- ManyChat -->
+<script src="//widget.manychat.com/255741615106254.js" async="async"></script>
   
   <style>
       .splash {
