updates the template for billing index

--- a/drehendz/src/index.html
+++ b/drehendz/src/index.html
@@ -73,6 +73,9 @@ version: []
 
 <body class="red-theme">  
 
+  <script type="text/javascript">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode:"94d22cdcbc669a0f626f7d5d8faedab77f6be7beb7fb9469074dd83fcf5c6965", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
+
+
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6ZL3VZ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
