--- a/drehendz/index.html
+++ b/drehendz/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <script data-ad-client="ca-pub-1304364114164634" 
+  <script data-ad-client="ca-pub-3265939152107870" 
+  async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  
+  <!-- <script data-ad-client="ca-pub-1304364114164634" 
   async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
-</script>
+</script> -->
 
   <!--Global site tag (gtag.js)- Google Analytics  -->
  <!-- Google Tag Manager -->
